# chroma-mcp

./: CHANGELOG.md  pyproject.toml
src/chroma_mcp/: __init__.py  server.py
tests/: test_server.py
