[project]
name = "chroma-mcp"
version = "0.2.7"
description = "Chroma MCP Server - Vector Database Integration for LLM Applications"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"

keywords = ["chroma", "mcp", "vector-database", "llm", "embeddings"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "chromadb>=1.0.20",
    "cohere>=5.17.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.13.1",
    "openai>=1.106.1",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "typing-extensions>=4.15.0",
    "voyageai>=0.3.4",
]

[project.urls]
Homepage = "https://github.com/chroma-core/chroma-mcp"
Documentation = "https://github.com/chroma-core/chroma-mcp#readme"
Issues = "https://github.com/chroma-core/chroma-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
chroma-mcp = "chroma_mcp:main"

[project.optional-dependencies]
sentence-transformers = ["sentence-transformers>=4.1.0"]
test = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
select = ["E", "F", "B", "I"]
ignore = []
line-length = 100
